FIX - Spacing Between Lines and Icons of Technologies Used and Knowledge

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,16 +222,15 @@ img {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    gap: 2rem 4rem;
 }
-
-    .current-company__technologies img:not(:first-child) {
-        margin-left: 2rem;
-    }
 
 /* KNOWLEDGE */
 .knowledge__technologies {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
+    gap: 2rem 4rem;
 }
 
 /* PROJECTS */
